--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="index.html">Select Work —</a><br><span>About Amanda</span></p>
+            <p><a href="index.html">About Amanda —</a><br><span>Info</span></p>
       </div>
 
         <div class="contact">
