--- a/section1.html
+++ b/section1.html
@@ -18,32 +18,42 @@
 
     <div class="nav">
   
-        <p>Amanda Jennings is a designer based in Brooklyn, NY</p><br>
-  
+        <p>👩🏼‍💻 AJ Design Portfolio</p>
+        <br>
     </div>
-
-
 
 
     <div class="nav-mobile">
   
-        <p>Amanda Jennings is a designer based in Brooklyn, NY<br>Contact: jenningsab@icloud.com</p><br>
+        <p>👩🏼‍💻 AJ Design Portfolio<br>Contact: jenningsab@icloud.com</p><br>
   
     </div>
-
 
 
 
     <div id="div1">     
       <div class="title">
-            <p><a href="index.html">Select Work —</a><br><span>PetPlate Supplements</span></p>
+            <p><a href="http://www.amandajennings.design">Select Work –<br>PetPlate Supplements</a></p>
+            <h1>
+            <br>
+            Amanda Jennings
+            <br><br>
+            is a graphic designer with a background <br>
+            in brand and marketing design based in <br>
+            Brooklyn, NY.
+            <br><br>
+            Currently: seeking new opportunities
+            <br><br>
+<!--             🔮 <a href="aboutme.html">Info</a><br> -->
+            💌 <a href="mailto:jenningsab@icloud.com">Email</a><br>
+            📎 <a href="img/AmandaJennings_Resume2023.pdf">Resume</a><br>
+            🌚 <a href="https://www.instagram.com/plumwhine/">Instagram</a><br><br></h1>
+
       </div>
 
-        <div class="contact">
-            <p><div class="email"><span>Info</span></div></a></p>
-        </div>
-
-
+<!--         <div class="contact">
+            <p><a href="mailto:jenningsab@icloud.com"><div class="email"><span>Info</span></div></a></p>
+        </div> -->
     </div>
 
 
@@ -64,10 +74,16 @@
                <div class="description">
             <b>Description</b>
                     <br>
-                    PetPlate offers a selection of vet-designed, human-grade whole ingredient food options for dogs. The objective was to shift from a previous packaging style and naming that resembled dog treats to a new design and positioning that accurately conveyed the products as functional soft chew supplements with beneficial ingredients. 
+                    PetPlate offers a selection of human-grade, vet-designed, filler-free, fresh wholesome ingredient food options for dogs. One of their signature products, supplements, was in need of a rebrand to accurately represent their beneficial and functional ingredients apart from dog treats.
                     <br><br>
-                    The visual identity for these supplements captures a warm apothecary feel, evoking the notion of providing beneficial ingredients akin to medicine while prioritizing palatability for dogs' consumption, through flavor.
+                    As the lead designer, I executed the supplements packaging rebrand while introducing two new SKUs and developed a unique look / feel to this product line, diversifying its offerings.
                     <br><br>
+                    The goal of this packaging re-brand was to shift from a previous packaging style and naming that resembled dog treats to a new design and positioning that accurately conveyed the products as functional soft chew supplements with beneficial ingredients. 
+                    <!-- <br><br>
+                    The visual identity for these supplements captures a warm apothecary feel, evoking the notion of providing beneficial ingredients akin to medicine while prioritizing palatability for dogs' consumption, through flavor. -->
+                    <br><br>
+
+
                     <b/>Roles</b>
                     <br>
                     Branding | Packaging Design | Art Direction | Assisted in Set Design | Proud Dog Model Mom
