--- a/section3.html
+++ b/section3.html
@@ -18,16 +18,14 @@
 
     <div class="nav">
   
-        <p>Amanda Jennings is a designer based in Brooklyn, NY</p><br>
-  
+        <p>👩🏼‍💻 AJ Design Portfolio</p>
+        <br>
     </div>
-
-
 
 
     <div class="nav-mobile">
   
-        <p>Amanda Jennings is a designer based in Brooklyn, NY<br>Contact: jenningsab@icloud.com</p><br>
+        <p>👩🏼‍💻 AJ Design Portfolio<br>Contact: jenningsab@icloud.com</p><br>
   
     </div>
 
@@ -36,14 +34,27 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="index.html">Select Work —</a><br><span>Global Pet Expo <br>Booth</span></p>
+            <p><a href="http://www.amandajennings.design">Select Work –<br>Global Pet Expo</a></p>
+            <h1>
+            <br>
+            Amanda Jennings
+            <br><br>
+            is a graphic designer with a background <br>
+            in brand and marketing design based in <br>
+            Brooklyn, NY.
+            <br><br>
+            Currently: seeking new opportunities
+            <br><br>
+<!--             🔮 <a href="aboutme.html">Info</a><br> -->
+            💌 <a href="mailto:jenningsab@icloud.com">Email</a><br>
+            📎 <a href="img/AmandaJennings_Resume2023.pdf">Resume</a><br>
+            🌚 <a href="https://www.instagram.com/plumwhine/">Instagram</a><br><br></h1>
+
       </div>
 
-        <div class="contact">
-            <p><div class="email"><span>Info</span></div></a></p>
-        </div>
-
-
+<!--         <div class="contact">
+            <p><a href="mailto:jenningsab@icloud.com"><div class="email"><span>Info</span></div></a></p>
+        </div> -->
     </div>
 
 
