--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <!--             🔮 <a href="aboutme.html">Info</a><br> -->
             💌 <a href="mailto:jenningsab@icloud.com">Email</a><br>
             📎 <a href="img/AmandaJennings_Resume2023.pdf" target="_blank">Resume</a><br>
+            ✏️ <a href="https://www.linkedin.com/in/jenningsab/" target="_blank">LinkedIn</a><br>
             🌚 <a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a><br><br></h1>
 
       </div>
@@ -66,16 +67,23 @@
 
     <div id="div2">
           <div class="services">
-                <a href="section2.html"><p class="one"><span>PetPlate Preferred 2:1 Campaign</span></a><br>
-
-                <a href="section1.html"><span>PetPlate Supplements</span></a><br>
+                <h1>PetPlate</h1>
+                <a href="section2.html"><p class="one"><span>Preferred 2:1 Campaign</span></a><br>
+                <a href="section1.html"><span>Dog Supplements</span></a><br>
                 <a href="section3.html"><span>Global Pet Expo Booth</span></a><br>
-                <a href="section6.html"><span>BondVet</span></a><br>
+                <h1>Bond Vet</h1>
+                <a href="section6.html"><span>OOH Campaign</span></a><br>
+
                 <a href="section4.html"><span>CE & The City</span></a><br>
+                <h1>Freelance, Brand Development</h1>
                 <a href="section9.html"><span>Hook & Blade – OnHand</span></a><br>
+
+                <h1>The Knot Worldwide</h1>
                 <a href="section8.html"><span>WeddingPro Insights</span></a><br>
-                <a href="section7.html"><span>GA Marketing Campaigns</span></a><br>  
-                <a href="section5.html"><span>GA Remote Learning Video</span></a><br>
+
+                <h1>General Assembly </h1>
+                <a href="section7.html"><span>Marketing Campaigns</span></a><br>  
+                <a href="section5.html"><span>Remote Learning Video</span></a><br>
 
                 <br><br>
 <!--                 <a href="aboutme.html"><span>About Amanda</span></a><br> -->
