--- a/section3.html
+++ b/section3.html
@@ -48,6 +48,7 @@
 <!--             🔮 <a href="aboutme.html">Info</a><br> -->
             💌 <a href="mailto:jenningsab@icloud.com">Email</a><br>
             📎 <a href="img/AmandaJennings_Resume2023.pdf">Resume</a><br>
+            ✏️ <a href="https://www.linkedin.com/in/jenningsab/" target="_blank">LinkedIn</a><br>
             🌚 <a href="https://www.instagram.com/plumwhine/">Instagram</a><br><br></h1>
 
       </div>
