--- a/section3.html
+++ b/section3.html
@@ -34,7 +34,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="http://www.amandajennings.design">Select Work –<br>Global Pet Expo</a></p>
+            <p><a href="http://www.amandajennings.design">Select Work –<br>Global Pet <br>Expo Booth</a></p>
             <h1>
             <br>
             Amanda Jennings
