--- a/section7.html
+++ b/section7.html
@@ -34,7 +34,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="http://www.amandajennings.design">Select Work –<br>GA Marketing <br>Campaigns</a></p>
+            <p><a href="http://www.amandajennings.design">Select Work –<br>Marketing <br>Campaigns</a></p>
             <h1>
             <br>
             Amanda Jennings
