--- a/section1.html
+++ b/section1.html
@@ -33,7 +33,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="http://www.amandajennings.design">Select Work –<br>PetPlate Supplements</a></p>
+            <p><a href="http://www.amandajennings.design">Select Work –<br>Supplements</a></p>
             <h1>
             <br>
             Amanda Jennings
