--- a/section5.html
+++ b/section5.html
@@ -34,7 +34,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="http://www.amandajennings.design">Select Work –<br>GA Remote<br>Learning Video</a></p>
+            <p><a href="http://www.amandajennings.design">Select Work –<br>Remote Learning <br> Video</a></p>
             <h1>
             <br>
             Amanda Jennings
