--- a/section6.html
+++ b/section6.html
@@ -34,7 +34,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="http://www.amandajennings.design">Select Work –<br>Bond Vet</a></p>
+            <p><a href="http://www.amandajennings.design">Select Work –<br>OOH Campaign</a></p>
             <h1>
             <br>
             Amanda Jennings
