--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
           <div class="services">
                 <h1>PetPlate</h1>
                 <a href="section2.html"><p class="one"><span>Preferred 2:1 Campaign</span></a><br>
+                <a href="section10.html"><span>Modular Email Templates</span></a><br>
                 <a href="section1.html"><span>Supplements</span></a><br>
-                <a href="section3.html"><span>Global Pet Expo Booth</span></a><br>
+<!--                 <a href="section3.html"><span>Global Pet Expo Booth</span></a><br> -->
                 
                 <h1>Bond Vet</h1>
                 <a href="section6.html"><span>OOH Campaign</span></a><br>
