--- a/section10.html
+++ b/section10.html
@@ -33,7 +33,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="http://www.amandajennings.design">Select Work –<br>Modular Email Templates</a></p>
+            <p><a href="http://www.amandajennings.design">Select Work –<br>Modular Email <br>Templates</a></p>
             <h1>
             <br>
             Amanda Jennings
