--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <h1>PetPlate</h1>
                 <a href="section2.html"><p class="one"><span>Preferred 2:1 Campaign</span></a><br>
                 <a href="section10.html"><span>Modular Email Templates</span></a><br>
-                <a href="section1.html"><span>Supplements</span></a><br>
+                <a href="section11.html"><span>Direct Response LP</span></a><br>
+                <a href="section1.html"><span>Supplements Packaging</span></a><br>
 <!--                 <a href="section3.html"><span>Global Pet Expo Booth</span></a><br> -->
                 
                 <h1>Bond Vet</h1>
