--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                 <a href="section8.html"><span>WeddingPro Insights</span></a><br>
 
                 <h1>General Assembly </h1>
-                <a href="section7.html"><span>Marketing Campaigns</span></a><br>  
+                <a href="section7.html"><span>Marketing Campaigns</span></a><br>
+                <a href="section12.html"><span>Thank You For Learning With Us</span></a><br>
                 <a href="section5.html"><span>Remote Learning Video</span></a><br>
 
                 <br><br>
