--- a/section11.html
+++ b/section11.html
@@ -75,7 +75,7 @@
                <div class="description">
             <b>Description</b>
                     <br>
-                    Collaboratively developed a direct response landing page to drive immediate action and enhance conversions for digital paid advertising. Emphasizes the food's benefits and aligns seamlessly with the originating social media platform.
+                    Collaboratively developed a direct response landing page to drive immediate action and enhance conversions for paid advertising. The LP emphasizes the food's benefits and pulls inspiration from the native platforms a user has clicked.
 
             <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
