--- a/section12.html
+++ b/section12.html
@@ -75,7 +75,7 @@
                <div class="description">
             <b>Description</b>
                     <br>
-                    Fun tote design for General Assembly students who have taken a workshop or course. Inspired by grocery bag messaging.
+                    Concepted and designed a fun tote for General Assembly students enrolled in a tech course. Inspired by grocery bag messaging.
 
             <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
