--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a href="section10.html"><span>Modular Email Templates</span></a><br>
                 <a href="section11.html"><span>Direct Response LP</span></a><br>
                 <a href="section1.html"><span>Supplements Packaging</span></a><br>
-<!--                 <a href="section3.html"><span>Global Pet Expo Booth</span></a><br> -->
+                <a href="section3.html"><span>Global Pet Expo Booth</span></a><br>
                 
                 <h1>Bond Vet</h1>
                 <a href="section6.html"><span>OOH Campaign</span></a><br>
