--- a/section1.html
+++ b/section1.html
@@ -33,24 +33,26 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="http://www.amandajennings.design">Select Work –<br>Supplements</a></p>
+            <p><a href="index.html">Select Work –<br>Supplements <br>Packaging</a></p>
             <h1>
             <br>
             Amanda Jennings
             <br><br>
-            is a graphic designer with a background <br>
-            in brand and marketing design based in <br>
-            Brooklyn, NY.
+            is a visual designer with 8+ years <br>
+            experience in brand and marketing design <br>
+            based in Brooklyn, NY.
             <br><br>
-            Currently: seeking new opportunities
+            Currently: Seeking new opportunities
             <br><br>
 <!--             🔮 <a href="aboutme.html">Info</a><br> -->
             💌 <a href="mailto:jenningsab@icloud.com">Email</a><br>
-            📎 <a href="img/AmandaJennings_Resume2023.pdf">Resume</a><br>
-            ✏️ <a href="https://www.linkedin.com/in/jenningsab/" target="_blank">LinkedIn</a><br>
-            🌚 <a href="https://www.instagram.com/plumwhine/">Instagram</a><br><br></h1>
+            📎 <a href="img/AmandaJennings_Resume2023.pdf" target="_blank">Resume</a><br>
+            ✏️ <a href="https://www.linkedin.com/in/jenningsab/" target="_blank">LinkedIn</a><br><br>
+            🌚 <a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a><br>
+            🐾 <a href="https://www.instagram.com/p/CQZPKJ2smRP/" target="_blank">A picture of my dog</a><br><br>
 
       </div>
+
 
 <!--         <div class="contact">
             <p><a href="mailto:jenningsab@icloud.com"><div class="email"><span>Info</span></div></a></p>
