--- a/index.html
+++ b/index.html
@@ -45,19 +45,21 @@
             <br>
             Amanda Jennings
             <br><br>
-            is a graphic designer with a background <br>
-            in brand and marketing design based in <br>
-            Brooklyn, NY.
+            is a visual designer with 8+ years <br>
+            experience in brand and marketing design <br>
+            based in Brooklyn, NY.
             <br><br>
-            Currently: seeking new opportunities
+            Currently: Seeking new opportunities
             <br><br>
 <!--             🔮 <a href="aboutme.html">Info</a><br> -->
             💌 <a href="mailto:jenningsab@icloud.com">Email</a><br>
             📎 <a href="img/AmandaJennings_Resume2023.pdf" target="_blank">Resume</a><br>
-            ✏️ <a href="https://www.linkedin.com/in/jenningsab/" target="_blank">LinkedIn</a><br>
-            🌚 <a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a><br><br></h1>
+            ✏️ <a href="https://www.linkedin.com/in/jenningsab/" target="_blank">LinkedIn</a><br><br>
+            🌚 <a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a><br>
+            🐾 <a href="https://www.instagram.com/p/CQZPKJ2smRP/" target="_blank">A picture of my dog</a><br><br>
 
       </div>
+
 
 <!--         <div class="contact">
             <p><a href="mailto:jenningsab@icloud.com"><div class="email"><span>Info</span></div></a></p>
@@ -80,6 +82,7 @@
                 
                 <h1>Freelance, Brand Development</h1>
                 <a href="section9.html"><span>Hook & Blade – OnHand</span></a><br>
+<!--                 <a href="section13.html"><span>Big Little Feelings</span></a><br> -->
 
                 <h1>The Knot Worldwide</h1>
                 <a href="section8.html"><span>WeddingPro Insights</span></a><br>
