--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <a href="section2.html"><p class="one"><span>Preferred 2:1 Campaign</span></a><br>
                 <a href="section10.html"><span>Modular Email Templates</span></a><br>
                 <a href="section11.html"><span>Direct Response LP</span></a><br>
+                <a href="section14.html"><span>Lifestyle + Studio Photography</span></a><br>
                 <a href="section1.html"><span>Supplements Packaging</span></a><br>
                 <a href="section3.html"><span>Global Pet Expo Booth</span></a><br>
                 
