--- a/section14.html
+++ b/section14.html
@@ -113,7 +113,7 @@
           <div class="description">
             <b>Description</b>
                     <br>
-                    Art direction, select photography for new product launches: dry food and supplements re-brand. Photography produced with: Garnish Studios.
+                    Art direction, select photography for new product launches: FreshBaked dry food and supplements re-brand. Photography produced with: Garnish Studios.
 
             <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
@@ -152,7 +152,7 @@
           <div class="description">
             <b>Description</b>
                     <br>
-                    Art direction, select photography for evengreen content focused on the org's reformulation of entrees. Photographer: Celeste Martearena.
+                    Art direction, select photography for evengreen content focused on the org's reformulation of FreshCooked entrees. Photographer: Celeste Martearena.
 
             <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
