--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 
                 <h1>Freelance, Brand Development</h1>
                 <a href="section9.html"><span>Hook & Blade – OnHand</span></a><br>
-<!--                 <a href="section13.html"><span>Big Little Feelings</span></a><br> -->
+                <a href="section13.html"><span>Big Little Feelings</span></a><br>
 
                 <h1>The Knot Worldwide</h1>
                 <a href="section8.html"><span>WeddingPro Insights</span></a><br>
