--- a/section13.html
+++ b/section13.html
@@ -77,7 +77,7 @@
                <div class="description">
             <b>Description</b>
                     <br>
-                    Big Little Feelings is a successful toddler parenting resouce that helps parents thrive. The brand was in the need of a visual redesign to aid in expanding their reach.
+                    Big Little Feelings is a successful toddler parenting online resouce that helps parents thrive through challenges. The brand was in the need of a visual redesign to aid in expanding their reach. Their channels of communication inclue Instagram, email, their website, and online course offerings.
 
             <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
