--- a/section10.html
+++ b/section10.html
@@ -122,7 +122,7 @@
                     <br>
                     To establish email system rules, I employed and adapted PetPlate's existing brand guidelines. I applied the web design guidelines to achieve a consistent omnichannel experience across the brand's marketing channels.
                 <br><br>
-                    I adapted the existing guidelines for the email platform, reserving the brand's secondary colors for sale/promotional emails or to highlight specific products (as each protein corresponds to a secondary brand color). I also chose web-safe fonts similar to the brand's typefaces.
+                    I reserved the brand's secondary colors for sale/promotional emails or to highlight specific products (as each protein corresponds to a secondary brand color). I also chose web-safe fonts that closely related to the brand's fonts.
 
             <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
