--- a/section14.html
+++ b/section14.html
@@ -152,7 +152,7 @@
           <div class="description">
             <b>Description</b>
                     <br>
-                    Art direction, select photography for evengreen content focused on the org's reformulation of FreshCooked entrees. Photographer: Celeste Martearena.
+                    Art direction, select photography for evergreen content focused on the org's reformulation of FreshCooked entrees. Photographer: Celeste Martearena.
 
             <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
