--- a/section1.html
+++ b/section1.html
@@ -78,7 +78,7 @@
                     <br><br>
                     The current supplement packaging had a playful visual style and naming approach, which made it resemble treats more than conveying beneficial ingredients associated with supplements.
                     <br><br>
-                    Project goals: distinguish supplements from dog treats, showcase the supplement's beneficial / functional ingredients, and develop a unique loook and feel for the new product line.
+                    Project goals: distinguish supplements from dog treats, showcase the supplement's beneficial / functional ingredients, and develop a unique look and feel for the new product line.
                     <br>
 
             <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
