--- a/section10.html
+++ b/section10.html
@@ -42,7 +42,7 @@
             experience in brand and marketing design <br>
             based in Brooklyn, NY.
             <br><br>
-            Currently: Seeking new opportunities
+            Currently: Sr Visual Designer @ Owlet
             <br><br>
 <!--             🔮 <a href="aboutme.html">Info</a><br> -->
             💌 <a href="mailto:jenningsab@icloud.com">Email</a><br>
@@ -73,6 +73,8 @@
             <b>Description</b>
                     <br>
                     As an extension of their digital presence, I created a modular email design system for PetPlate to systematize email layout, simplify production, and accommodate a variety of content sends. 
+                    <br><br>
+                    Project Goals: Ensure consistent brand identity throughout email sends, systemize email layout, simplify and steamline production, and ensure conversion rates increased.
                     <br><br>
                     Below are the steps myself and the team took to ensure PetPlate's brand identity in marketing emails and establish an efficient production process.
 
