--- a/section11.html
+++ b/section11.html
@@ -42,7 +42,7 @@
             experience in brand and marketing design <br>
             based in Brooklyn, NY.
             <br><br>
-            Currently: Seeking new opportunities
+            Currently: Sr Visual Designer @ Owlet
             <br><br>
 <!--             🔮 <a href="aboutme.html">Info</a><br> -->
             💌 <a href="mailto:jenningsab@icloud.com">Email</a><br>
