--- a/section2.html
+++ b/section2.html
@@ -43,7 +43,7 @@
             experience in brand and marketing design <br>
             based in Brooklyn, NY.
             <br><br>
-            Currently: Seeking new opportunities
+            Currently: Sr Visual Designer @ Owlet
             <br><br>
 <!--             🔮 <a href="aboutme.html">Info</a><br> -->
             💌 <a href="mailto:jenningsab@icloud.com">Email</a><br>
@@ -72,7 +72,9 @@
         <div class="description">
             <b>Description</b>
                     <br>
-                    With PetPlate’s switch in manufacturers and cooking techniques, this marketing campaign was developed to showcase the improvements made to the meals: more noticeable chunks of meat and vegetables. To fortify the marketing campaign messaging, the working team integrated data obtained from a diverse focus group encompassing dogs of different ages, sizes, and breeds. The results demonstrated that the new recipe was preferred by the majority of dogs at a ratio of 2:1.
+                    As part of PetPlate's ongoing efforts to improve product offerings, the organization updated their signature product, FreshCooked, entree manufacturer and cooking technique. The marketing team then looked to organize a digital brand awareness campaign to inform current customers and prospects about the improvements made to the meals: more noticable chunks of meat and vegetables, variety of flavors, and being recommended by others.
+                    <br><br>
+                    To fortify the marketing campaign messaging, the working team integrated data obtained from a diverse focus group encompassing dogs of different ages, sizes, and breeds. The results demonstrated that the new recipe was preferred by the majority of dogs at a ratio of 2:1.
                     <br><br>
                     To visually convey these enhancements, the meals are shown prominently top-down, making these the main focus and providing a detailed view of the improved formula. The incorporated colors are symbolic of each of the entree lid flavors that customers recognize the formulas by.
             <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
